fix: handle tags treeview collapse and expend when add, edit and delete tag.

--- a/taguette/static/css/custom.css
+++ b/taguette/static/css/custom.css
@@ -289,6 +289,15 @@ a.dropdown-item:hover {
   color: black;
 }
 
+.highlight-new-tag {
+    background-color: #E7F2FF !important;
+    transition: background-color 1s ease;
+}
+
+.highlight-new-tag.fade-out {
+    background-color: transparent !important;
+}
+
 #hlinfo {
   display: none;
   position: absolute;
